treinamento da yolo

--- a/prepare-data/data_visualization.ipynb
+++ b/prepare-data/data_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,10 +65,18 @@
     "    \n",
     "    image_id = dict_ref['annotations'][index]['image_id']\n",
     "    if image_id > 1000: image_id -= 1000\n",
+    "\n",
+    "    #padrão (x_min, y_min, width, height) -> (x_center, y_center, width/2, height/2)\n",
+    "    x_center = dict_ref['annotations'][index]['bbox'][0] + dict_ref['annotations'][index]['bbox'][2]/2\n",
+    "    y_center = dict_ref['annotations'][index]['bbox'][1] + dict_ref['annotations'][index]['bbox'][3]/2\n",
+    "    dict_ref['annotations'][index]['bbox'][0] = x_center\n",
+    "    dict_ref['annotations'][index]['bbox'][1] = y_center\n",
+    " \n",
     "    dict_ref['annotations'][index]['bbox'][0] /= dict_ref['images'][image_id - 1]['width']\n",
     "    dict_ref['annotations'][index]['bbox'][1] /= dict_ref['images'][image_id - 1]['height']\n",
     "    dict_ref['annotations'][index]['bbox'][2] /= dict_ref['images'][image_id - 1]['width']\n",
     "    dict_ref['annotations'][index]['bbox'][3] /= dict_ref['images'][image_id - 1]['height']\n",
+    "    \n",
     "\n",
     "for i in range(0, len(train['annotations'])):\n",
     "    normalize_bbox(dict_ref = train, index = i)\n",
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +99,7 @@
     "    '''\n",
     "\n",
     "    for i in range(0, len(dict_ref['annotations'])):\n",
-    "        value = str(dict_ref['annotations'][i]['category_id']) + ' '\n",
+    "        value = str(dict_ref['annotations'][i]['category_id'] - 1) + ' '\n",
     "        value += str(dict_ref['annotations'][i]['bbox'][0]) + ' ' \n",
     "        value += str(dict_ref['annotations'][i]['bbox'][1]) + ' '\n",
     "        value += str(dict_ref['annotations'][i]['bbox'][2]) + ' '\n",
